enforce config matching